--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "An API to fetch the manufacturer recall number for vehicle data",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js",
+    "start": "node app",
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Muntasir Biojid",
